css to prevent wrapping on query links

--- a/db-proj-ui/src/styles/layout.scss
+++ b/db-proj-ui/src/styles/layout.scss
@@ -112,6 +112,7 @@
     flex-direction: column;
     width: fit-content;
     height: fit-content;
+    white-space: nowrap;
 
     > a {
         display: flex;
